added MousePosition hook, got backgrounds to change depending on mouse position as well as the <h3> tag in the LandingPage.js file

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,19 @@
 html {
+}
+
+.musician-background {
 	background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.25), rgba(0, 0, 0, 0.9)),
 		url(./images/aspen-tuba.jpeg);
 	background-size: fit;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
+}
+
+.swe-background {
+	background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.25), rgba(0, 0, 0, 0.9)),
+		url(./images/arpad-czapp-H424WdcQN4Y-unsplash.jpeg);
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center;
